Changed text colors

--- a/content/index.html
+++ b/content/index.html
@@ -40,7 +40,7 @@ tags:
           <img src="static/imgs/haven-for-hope-2.jpg" alt="C">
           <div class="carousel-caption">
             <h3 class="carousel">Haven for Hope</h3>
-            Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope and healing to those who need it most.
+            <p>Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope and healing to those who need it most.</p>
           </div>
         </div>
       </div>
