--- a/content/index.html
+++ b/content/index.html
@@ -26,21 +26,21 @@ tags:
           <img src="static/imgs/IMG_1978.JPG" alt="A">
           <div class="carousel-caption">
             <h3 class="carousel">Giving Dignity, Giving Hope</h3>
-            SACDC provides $3 million dollars in free dental care to over 9,000 patients each year.
+            <p>SACDC provides $3 million dollars in free dental care to over 9,000 patients each year</p>
           </div>
         </div>
         <div class="item">
           <img src="static/imgs/IMG_1888.JPG" alt="B">
           <div class="carousel-caption">
             <h3 class="carousel">Welcome to SACDC</h3>
-            Since 1986- making a difference in the dental health of those in need
+            <p>Since 1986- making a difference in the dental health of those in need</p>
           </div>
         </div>
         <div class="item">
           <img src="static/imgs/haven-for-hope-2.jpg" alt="C">
           <div class="carousel-caption">
             <h3 class="carousel">Haven for Hope</h3>
-            <p>Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope and healing to those who need it most.</p>
+            <p>Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope and healing to those who need it most</p>
           </div>
         </div>
       </div>
