Eligibility bullet list formating.

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -92,24 +92,32 @@ tags:
         <hr class="half-rule">
         <p>
           <h3>Free Dental Services Include:</h3>
-          <ul style="text-align:center;">
-            <li>Exams</li>
-            <li>X-rays</li>
-            <li>General Dentistry</li>
-            <li>Oral Health Education</li>
-            <li>Cleanings</li>
-            <li>Fillings</li>
-            <li>Extractions and more…</li>
-          </ul>
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+              <ul>
+                <li>Exams</li>
+                <li>X-rays</li>
+                <li>General Dentistry</li>
+                <li>Oral Health Education</li>
+                <li>Cleanings</li>
+                <li>Fillings</li>
+                <li>Extractions and more…</li>
+              </ul>
+            </div>
+          </div>
         </p>
         <hr class="half-rule">
         <p>
           <h3>Prosthetics Include:</h3>
-          <ul style="text-align:center;">
-            <li>Dentures</li>
-            <li>Bridges</li>
-            <li>Partials</li>
-          </ul>
+          <div class="row">
+            <div class="col-md-3 col-md-offset-4">
+              <ul>
+                <li>Dentures</li>
+                <li>Bridges</li>
+                <li>Partials</li>
+              </ul>
+            </div>
+          </div>
           <em>Clients are asked to pay only for the discounted materials cost for prosthetics.</em>
         </p>
         <hr class="half-rule">
