Increased submit button size.

--- a/content/seek_care/index.html
+++ b/content/seek_care/index.html
@@ -71,7 +71,7 @@ tags:
               <p align="left"> Check this box if you have dental insurance</p>
             </label>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary"><div style="font-size:2em;">Submit</div></button>
         </form>
 
         <div class="alert alert-success" id="elig" style="display:none">You are eligible to receive care. Please <a href="/seek_care/sched_vst">schedule a visit.</a></div>
