Made major mods to front page

--- a/content/index.html
+++ b/content/index.html
@@ -6,52 +6,43 @@ tags:
 ---
 
 <div class="bs-docs-featurette">
-  <!-- <div class="container"> **SUSPECT CAUSE OF RIGHT ALIGN ISSUE**-->
-    <h2 class="bs-docs-featurette-title">San Antonio Christian Dental Clinic</h2>
-    <p class="lead">Bringing help, healing and hope to San Antonio since 1986.</p>
-
-    <hr class="half-rule">
-
-    <div id="show" class="row carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#show" data-slide-to="0" class="active"></li>
-        <li data-target="#show" data-slide-to="1"></li>
-        <li data-target="#show" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="static/imgs/IMG_1978.JPG" alt="A">
-          <div class="carousel-caption">
-            <h3 class="carousel">Giving Dignity, Giving Hope</h3>
-            <p>SACDC provides $3 million dollars in free dental care to over 9,000 patients each year</p>
+  <div id="show" class="row carousel slide" data-ride="carousel">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="static/imgs/pic-content/frontpage1.jpg" alt="A">
+          <div class="carousel-caption captionleft">
+            <h3 class="carousel">Help us bring back a smile</h3>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
           </div>
-        </div>
-        <div class="item">
-          <img src="static/imgs/IMG_1888.JPG" alt="B">
-          <div class="carousel-caption">
-            <h3 class="carousel">Welcome to SACDC</h3>
-            <p>Since 1986- making a difference in the dental health of those in need</p>
+          <div class="carousel-caption captionattributionright">
+                <a href="https://creativecommons.org/licenses/by-nc/2.0/legalcode" target="_blank">Photo by Michael Dreves Beier</a>
           </div>
-        </div>
-        <div class="item">
-          <img src="static/imgs/haven-for-hope-2.jpg" alt="C">
-          <div class="carousel-caption">
-            <h3 class="carousel">Haven for Hope</h3>
-            <p>Located on the transformational Haven for Hope campus, SACDC seeks to provide health, hope and healing to those who need it most</p>
+      </div>
+      <div class="item">
+        <img src="static/imgs/pic-content/frontpage2.jpg" alt="B">
+          <div class="carousel-caption captionright">
+            <h3 class="carousel">Dental care for those in need</h3>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionattributionleft">
+              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
+          </div>
+      </div>
+      <div class="item">
+        <img src="static/imgs/pic-content/frontpage3.jpg" alt="A">
+          <div class="carousel-caption captionleft">
+            <h3 class="carousel">The need is great</h3>
+                <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
+                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
+          </div>
+          <div class="carousel-caption captionattributionright">
+              <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
           </div>
         </div>
       </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#show" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <a class="right carousel-control" href="#show" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
     </div>
-  <!-- </div> -->
+  </div>
 </div>
