--- a/content/index.html
+++ b/content/index.html
@@ -45,4 +45,46 @@ tags:
       </div>
     </div>
   </div>
+<hr class="half-rule">
+  <div class="row">
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpagepic" src="/static/imgs/pic-content/pic17_480.jpg">
+            </p>
+            <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
+    </div>
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpagepic" src="/static/imgs/pic-content/pic18_480.jpg">
+            </p>
+            <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
+    </div>
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpagepic" src="/static/imgs/pic-content/pic19_480.jpg">
+            </p>
+            <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
+            </div>
+  </div>
+<hr class="half-rule">
+  <div class="row">
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpageicon" src="/static/imgs/logos/Local_Partnerships.gif">
+        </p>
+        <h4 class="text-center">Eradicating poverty requires strong partnerships</h4>
+    </div>
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpageicon" src="/static/imgs/logos/Credentials.gif">
+        </p>
+        <h4 class="text-center">Certifications you can trust</h4>
+    </div>
+    <div class="col-md-4 partner">
+        <p class="text-center">
+        <img class="img-responsive frontpageicon" src="/static/imgs/logos/Privately_Funded.gif">
+        </p>
+        <h4 class="text-center">Every dollar of our funding is born and raised in Texas</h4>
+    </div>
+  </div>
 </div>
