Added horizontal rules to front page

--- a/content/index.html
+++ b/content/index.html
@@ -45,7 +45,7 @@ tags:
       </div>
     </div>
   </div>
-<hr class="half-rule">
+<hr class="full-rule">
   <div class="row">
     <div class="col-md-4 partner">
         <p class="text-center">
