Added story pages/links

--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@ tags:
           <div class="carousel-caption captionleft">
             <h3 class="carousel">Help us bring back a smile</h3>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
-                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
+                <a href="/stories/story1/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionattributionright">
                 <a href="https://creativecommons.org/licenses/by-nc/2.0/legalcode" target="_blank">Photo by Michael Dreves Beier</a>
@@ -25,7 +25,7 @@ tags:
           <div class="carousel-caption captionright">
             <h3 class="carousel">Dental care for those in need</h3>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
-                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
+                <a href="/stories/story2/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionattributionleft">
               <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
@@ -36,7 +36,7 @@ tags:
           <div class="carousel-caption captionleft">
             <h3 class="carousel">The need is great</h3>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
-                <a href="/clinic_info" class="btn btn-primary active" role="button">Learn More</a>
+                <a href="/stories/story3/" class="btn btn-primary active" role="button">Learn More</a>
           </div>
           <div class="carousel-caption captionattributionright">
               <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode" target="_blank">Photo by Laurent Lavì Lazzeresky</a>
