Changed page titles from white to black

--- a/content/stories/story1.html
+++ b/content/stories/story1.html
@@ -8,7 +8,7 @@ tags:
 <div class="bs-docs-featurette">
     <div class="row">
       <div class="col-md-6">
-        <h2>Hello, my name is ...</h2>
+        <h2 class="bs-docs-featurette-title">Hello, my name is ...</h2>
         <p class="lead">
         This is my story.
         </p>
