--- a/content/stories/story2.html
+++ b/content/stories/story2.html
@@ -14,7 +14,7 @@ tags:
               </div>
       </div>
         <div class="col-md-6">
-            <h2>Hello, my name is ...</h2>
+            <h2 class="bs-docs-featurette-title">Hello, my name is ...</h2>
             <p class="lead">
             This is my story.
             </p>
