Cleaned up featurette/white text

--- a/content/index.html
+++ b/content/index.html
@@ -45,7 +45,7 @@ tags:
       </div>
     </div>
   </div>
-<hr class="full-rule">
+<hr class="half-rule">
   <div class="row">
     <div class="col-md-4">
         <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
