First set of changes (index.html)

--- a/content/index.html
+++ b/content/index.html
@@ -32,7 +32,7 @@ tags:
           </div>
       </div>
       <div class="item">
-        <img src="static/imgs/pic-content/frontpage3.jpg" alt="A">
+        <img src="static/imgs/pic-content/frontpage3.jpg" alt="C">
           <div class="carousel-caption captionleft">
             <h3 class="carousel">The need is great</h3>
                 <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
@@ -45,20 +45,39 @@ tags:
       </div>
     </div>
   </div>
-<hr class="half-rule">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <h3 class="text-center">The San Antonio Christian Dental Clinic is on a mission to extend Christ's healing by providing charitable dental care to underserved Bexar County adults</h3></br>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-4">
+      <a class="tinted" href="/seek_care/">
         <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic17_480.jpg">
-            <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
+          <div class="carousel-caption carousel-caption-ctr">
+            <h3>The Problem: Lack of Access</h3>
+          </div>
+      </a>
+      <h4 class="text-center">41% of San Antonio adults lack access to basic dental care.</h4>
     </div>
     <div class="col-md-4">
-        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480.jpg">
-            <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
+        <a class="tinted" href="/seek_care/sched_vst">
+            <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic18_480.jpg">
+                <div class="carousel-caption carousel-caption-ctr">
+                    <h3>Breaking Down Barriers</h3>
+                </div>
+                </a>
+        <h4 class="text-center">We provide free dental care to San Antonio's homeless and low income adults.</h4>
     </div>
     <div class="col-md-4">
-        <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480.jpg">
-            <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
-            </div>
+        <a class="tinted" href="/get_involved/">
+            <img class="bs-docs-featurette-img img-responsive" src="/static/imgs/pic-content/pic19_480.jpg">
+                <div class="carousel-caption carousel-caption-ctr">
+                    <h3>How You Can Help</h3>
+                </div>
+                </a>
+        <h4 class="text-center">Help us shape San Antonio's future, together.</h4>
+    </div>
   </div>
 <hr class="half-rule">
   <div class="row">
