--- a/content/stories/story2.html
+++ b/content/stories/story2.html
@@ -14,10 +14,9 @@ tags:
               </div>
       </div>
         <div class="col-md-6">
-            <h2 class="bs-docs-featurette-title">Hello, my name is ...</h2>
-            <p class="lead">
-            This is my story.
-            </p>
+            <h4>As with many homeless indivuduals seeking to re-enter the workforce, Juan came to the clinic seeking care for his appearance. He had not been to the dentist in several years and many of his teeth were missing, broken, or needed to be filled. After receiving a number of fillings and replacements, Juan vocalized the new found sense of confidence a new smile gave him:</h4></br>
+            <h4>"I find myself so grateful today. I have my smile back thanks to you all. My self esteem has returned thanks to the volunteers and employees of SACDC."</h4></br>
+            <h4>Studies continue to show that employers partially judge future employees on their smile.  Help us eliminate this barrier for our patients by providing the gift of needed dental treatment.</h4></br>
             <a href="/get_involved/donations/" class="btn btn-primary active" role="button">Donate Now</a>
             <a href="/get_involved/" class="btn btn-primary active" role="button">Volunteer</a>
         </div>
